apps/precisase/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: precisase
  namespace: apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`precisase.ramoneees.com`)
      kind: Rule
      services:
        - name: precisase-web
          port: 3000
  tls:
    secretName: wildcard-ramoneees-com-tls
